--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,24 +4,24 @@
     color: #fff;
     text-align: center;
     padding: 10px;
-    position: fixed; /* Changed from sticky to fixed */
     left: 0;
     bottom: 0;
     width: 100%;
     z-index: 1000; /* Ensure the footer is above other content */
+    justify-content: space-between; /* This will ensure space is distributed evenly, pushing the last item to the bottom */
 }
 
 .footer a {
     color: #fff;
+    margin: 0 70px; /* Adds horizontal spacing between icons */
 }
 
 .footer a:hover {
     text-decoration: underline; /* Only underline on hover for better UI */
 }
 
-.footer a2 {
+.footer p{
     color: #fff;
-    text-decoration: none; /* Updated to remove underline by default */
-    margin: 0 70px; /* Adds horizontal spacing between icons */
+    bottom: 0px;
 }
 
