--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,9 +1,3 @@
-body {
-  background-color: #4d4d4d; /* Light grey background */
-  margin: 0; /* Removes default margin */
-  font-family: Arial, sans-serif;
-}
-
 .hero-section {
   display: flex;
   flex-direction: row; /* Default layout */
@@ -90,16 +84,18 @@ body {
 }
 
 .about-content h2 {
+  padding-top: 20px;
   font-size: 30px; /* Smaller text size for h2, adjust as necessary */
-  max-width: 45%; /* Adjust the width to make room for the larger images grid */
+  max-width: 55%; /* Adjust the width to make room for the larger images grid */
 }
 
 .images-grid {
+  padding-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* Keeps a 3x3 grid */
   gap: 20px; /* Increases the gap for better spacing with larger images */
   width: 50%; /* Adjust width to your preference */
-  max-width: 600px; /* Increases max-width to allow larger images */
+  max-width: 500px; /* Increases max-width to allow larger images */
 }
 
 .images-grid img {
