--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  background-color: #4d4d4d; /* Light grey background */
+  background-color: #000000; /* Light grey background */
   margin: 0; /* Removes default margin */
   font-family: Arial, sans-serif;
+  color: #ffffff;
 }
 
 
@@ -16,4 +17,48 @@ body {
 
 .container {
   flex-grow: 1; /* This makes the content area grow to fill available space, pushing the footer down */
+}
+
+.starry-sky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  overflow: auto;
+  z-index: -1;
+}
+
+
+
+.starry-sky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;;
+  overflow: hidden;
+  z-index: -1;
+}
+
+
+.star {
+  width: 3px;
+  height: 3px;
+  background: white;
+  border-radius: 50%;
+  position: absolute;
+  opacity: 0.8;
+  animation: twinkle 4s infinite ease-in-out;
+}
+
+@keyframes twinkle {
+  0%, 100% {
+    opacity: 0.8;
+  }
+  50% {
+    opacity: 0.2;
+  }
 }
